<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

   <ImageView
   android:layout_width="200dp"
       android:layout_height="200dp"
       android:src="@drawable/mmm"
      android:layout_gravity="center"
       android:layout_marginTop="20dp" />

   <EditText
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="20dp"
       android:hint="@string/email_addres"
       android:gravity="center"
      android:inputType="textEmailAddress"
      />
      <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dp"
          android:hint="Password"
         android:layout_gravity="center"
         android:inputType="numberPassword"
          android:gravity="center"/>
   <CheckBox
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="Rmember me"
      android:layout_gravity="center"
      android:layout_marginTop="10dp"/>

      <Button
          android:id="@+id/btnLogin"
          android:layout_width="200dp"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:layout_marginTop="12dp"
          android:text="@string/log_in"
      />
   <TextView
       android:id="@+id/txt_forgetpassword"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_gravity="center"
       android:layout_marginTop="15dp"
      android:text="@string/forget_your_password"
      android:textSize="17sp"
   />
   <TextView
       android:id="@+id/txt_register"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
      android:text="@string/create_an_account"
      android:layout_gravity="center"
      android:layout_marginTop="10dp"
      android:textSize="14sp"
      android:textColor="@color/purple_700"/>
</LinearLayout>